--- a/index.html
+++ b/index.html
@@ -82,3 +82,60 @@ layout: default
         </div>
       </div>
     </div>
+
+
+    ---
+      layout: default
+      title: 分类
+      header: Posts By Category
+      ---
+      
+      <div class="container docs-container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="sidebar hidden-print" role="complementary">
+              <div id="navigation">
+                <h1>目录</h1>
+                <ul class="nav sidenav">
+                  {% if site.categories.first[0] == null %}
+                    {% for category in site.categories %} 
+                        <li><a href="#{{ category }}-ref">
+                          {{ category | join: "/" }} <span style="color: #999999;" >({{ site.categories[category].size }})</span>
+                        </a></li>
+                    {% endfor %}
+                  {% else %}
+                  {% for category in site.categories %} 
+                        <li><a href="#{{ category[0] }}-ref">
+                          {{ category[0] | join: "/" }}</a>
+                          <!-- <ul class="nav">
+                            {% for post in site.posts %}
+                              {% if post.category == category[0] %}
+                              <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+                              {% endif %}
+                            {% endfor%}
+                          </ul> -->
+                        </li>
+                  {% endfor %}
+                  {% endif %}
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-9" role="main">
+            <div class="panel docs-content">
+              <div class="wrapper">
+                <div class="home">
+            {% for category in site.categories %} 
+              <h3 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h3>
+              <ul>
+                {% assign pages_list = category[1] %}  
+                {% include LessOrMore/pages_list %}
+              </ul>
+            {% endfor %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
